# E-Store

./: db.sqlite3  pyproject.toml  requirements.txt
account/: admin.py  models.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py
config/: settings.py  urls.py
store/: views.py
templates/: alert.html  base.html
templates/components/: bottom-bar.html  footer-bottom.html  footer.html  nav-bar.html  top-bar.html
templates/store/: home.html  product-detail.html
